syntax = "proto3";

package meshtastic;

option go_package = "./pb";

enum HardwareModel {
  UNSET = 0;
  TLORA_V2 = 1;
  TLORA_V1 = 2;
  TLORA_V2_1_1P6 = 3;
  TBEAM = 4;
  HELTEC_V2_0 = 5;
  TBEAM_V0P7 = 6;
  T_ECHO = 7;
  TLORA_V1_1P3 = 8;
  RAK4631 = 9;
  HELTEC_V2_1 = 10;
  HELTEC_V1 = 11;
  LILYGO_TBEAM_S3_CORE = 12;
  RAK11200 = 13;
  NANO_G1 = 14;
  TLORA_V2_1_1P8 = 15;
  TLORA_T3_S3 = 16;
  NANO_G1_EXPLORER = 17;
  NANO_G2_ULTRA = 18;
  LORA_TYPE = 19;
  WIPHONE = 20;
  WIO_WM1110 = 21;
  RAK2560 = 22;
  HELTEC_HRU_3601 = 23;
  HELTEC_WIRELESS_BRIDGE = 24;
  STATION_G1 = 25;
  RAK11310 = 26;
  SENSELORA_RP2040 = 27;
  SENSELORA_S3 = 28;
  CANARYONE = 29;
  RP2040_LORA = 30;
  STATION_G2 = 31;
  LORA_RELAY_V1 = 32;
  NRF52840DK = 33;
  PPR = 34;
  GENIEBLOCKS = 35;
  NRF52_UNKNOWN = 36;
  PORTDUINO = 37;
  ANDROID_SIM = 38;
  DIY_V1 = 39;
  NRF52840_PCA10059 = 40;
  DR_DEV = 41;
  M5STACK = 42;
  HELTEC_V3 = 43;
  HELTEC_WSL_V3 = 44;
  BETAFPV_2400_TX = 45;
  BETAFPV_900_NANO_TX = 46;
  RPI_PICO = 47;
  HELTEC_WIRELESS_TRACKER = 48;
  HELTEC_WIRELESS_PAPER = 49;
  T_DECK = 50;
  T_WATCH_S3 = 51;
  PICOMPUTER_S3 = 52;
  HELTEC_HT62 = 53;
  EBYTE_ESP32_S3 = 54;
  ESP32_S3_PICO = 55;
  CHATTER_2 = 56;
  HELTEC_WIRELESS_PAPER_V1_0 = 57;
  HELTEC_WIRELESS_TRACKER_V1_0 = 58;
  UNPHONE = 59;
  TD_LORAC = 60;
  CDEBYTE_EORA_S3 = 61;
  TWC_MESH_V4 = 62;
  NRF52_PROMICRO_DIY = 63;
  RADIOMASTER_900_BANDIT_NANO = 64;
  HELTEC_CAPSULE_SENSOR_V3 = 65;
  HELTEC_VISION_MASTER_T190 = 66;
  HELTEC_VISION_MASTER_E213 = 67;
  HELTEC_VISION_MASTER_E290 = 68;
  HELTEC_MESH_NODE_T114 = 69;
  SENSECAP_INDICATOR = 70;
  TRACKER_T1000_E = 71;
  RAK3172 = 72;
  WIO_E5 = 73;
  RADIOMASTER_900_BANDIT = 74;
  PRIVATE_HW = 255;
}

message Position {
  enum LocSource {
    LOC_UNSET = 0;
    LOC_MANUAL = 1;
    LOC_INTERNAL = 2;
    LOC_EXTERNAL = 3;
  }

  enum AltSource {
    ALT_UNSET = 0;
    ALT_MANUAL = 1;
    ALT_INTERNAL = 2;
    ALT_EXTERNAL = 3;
    ALT_BAROMETRIC = 4;
  }

  optional sfixed32 latitude_i = 1;
  optional sfixed32 longitude_i = 2;
  optional int32 altitude = 3;
  fixed32 time = 4;
  LocSource location_source = 5;
  AltSource altitude_source = 6;
  fixed32 timestamp = 7;
  int32 timestamp_millis_adjust = 8;
  optional sint32 altitude_hae = 9;
  optional sint32 altitude_geoidal_separation = 10;
  uint32 PDOP = 11;
  uint32 HDOP = 12;
  uint32 VDOP = 13;
  uint32 gps_accuracy = 14;
  optional uint32 ground_speed = 15;
  optional uint32 ground_track = 16;
  uint32 fix_quality = 17;
  uint32 fix_type = 18;
  uint32 sats_in_view = 19;
  uint32 sensor_id = 20;
  uint32 next_update = 21;
  uint32 seq_number = 22;
  uint32 precision_bits = 23;
}
